@@ -1,12 +1,15 @@
 package ee.webmedia.alfresco.volume.job;
 
 import java.io.Serializable;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import org.alfresco.service.cmr.repository.NodeRef;
 import org.alfresco.service.cmr.repository.NodeService;
 import org.alfresco.service.namespace.QName;
+import org.alfresco.util.Pair;
+import org.alfresco.web.bean.repository.Node;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.quartz.JobExecutionContext;
@@ -21,26 +24,33 @@ import ee.webmedia.alfresco.common.web.BeanHelper;
 public class ExecuteArchiveJob implements StatefulJob {
 
     private static final Log LOG = LogFactory.getLog(ExecuteArchiveJob.class);
-    ArchivalsService archivalsService;
-    NodeService nodeService;
+
+    private ArchivalsService archivalsService;
+    private NodeService nodeService;
 
     @Override
     public void execute(JobExecutionContext context) throws JobExecutionException {
         LOG.debug("Starting ExecuteArchiveJob");
-        setServices(context);
+        setServices();
 
-        while (!archivalsService.isArchivingPaused()) {
+        while (!archivalsService.isArchivingPaused() && archivalsService.isArchivingAllowed()) {
             List<NodeRef> jobList = archivalsService.getAllInQueueJobs();
             if (jobList.isEmpty()) {
+                archivalsService.resetManualActions();
                 break;
             }
-            NodeRef archivingJobRef = jobList.get(0);
-            ArchiveJobStatus jobStatus = archivalsService.getArchivingStatus(archivingJobRef);
-            if (ArchiveJobStatus.IN_PROGRESS.equals(jobStatus)) {
+            Pair<NodeRef, ArchiveJobStatus> jobRefAndStatus = getNextArchivingJobWithStatus(jobList);
+            NodeRef archivingJobRef = jobRefAndStatus.getFirst();
+            ArchiveJobStatus jobStatus = jobRefAndStatus.getSecond();
+            boolean resumingPaused = ArchiveJobStatus.PAUSED.equals(jobStatus);
+            if (ArchiveJobStatus.IN_PROGRESS.equals(jobStatus) || resumingPaused) {
                 // archiving is executed in this thread so IN_PROGRESS job should only get here if server was restarted in the middle of archiving
                 NodeRef volumeRef = (NodeRef) nodeService.getProperty(archivingJobRef, ArchivalsModel.Props.VOLUME_REF);
                 if (!nodeService.exists(volumeRef)) {
                     LOG.warn("Archiving of volume (nodeRef=" + volumeRef + ") was removed from archiving job list.");
+                    if (resumingPaused) {
+                        LOG.warn("Unable to resume paused archiving job");
+                    }
                     archivalsService.removeJobNodeFromArchivingList(archivingJobRef);
                     continue;
                 }
@@ -51,8 +61,25 @@ public class ExecuteArchiveJob implements StatefulJob {
                 continue;
             }
             archivalsService.markArchivingJobAsRunning(archivingJobRef);
-            archivalsService.archiveVolumeOrCaseFile(archivingJobRef);
+            archivalsService.archiveVolumeOrCaseFile(archivingJobRef, resumingPaused);
         }
+    }
+
+    private Pair<NodeRef, ArchiveJobStatus> getNextArchivingJobWithStatus(List<NodeRef> jobList) {
+        Map<NodeRef, Node> jobs = BeanHelper.getBulkLoadNodeService().loadNodes(jobList, Collections.singleton(ArchivalsModel.Props.ARCHIVING_JOB_STATUS));
+        for (Map.Entry<NodeRef, Node> entry : jobs.entrySet()) {
+            ArchiveJobStatus status = getStatus(entry.getValue());
+            if (ArchiveJobStatus.PAUSED.equals(status)) {
+                return Pair.newInstance(entry.getKey(), status);
+            }
+        }
+        Node jobNode = jobs.get(jobList.get(0));
+        return Pair.newInstance(jobList.get(0), getStatus(jobNode));
+    }
+
+    private ArchiveJobStatus getStatus(Node entry) {
+        Map<String, Object> jobProps = entry.getProperties();
+        return ArchiveJobStatus.valueOf((String) jobProps.get(ArchivalsModel.Props.ARCHIVING_JOB_STATUS.toString()));
     }
 
     private void logArchiveResult(NodeRef archivingJobRef) {
@@ -70,7 +97,7 @@ public class ExecuteArchiveJob implements StatefulJob {
         }
     }
 
-    private void setServices(JobExecutionContext context) {
+    private void setServices() {
         archivalsService = BeanHelper.getArchivalsService();
         nodeService = BeanHelper.getNodeService();
     }
